--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.5.1",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.0",
     "nes.css": "^2.3.0",
