--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "aptos": "^1.21.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.8",
+    "classnames": "^2.5.1",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.0",
     "mongodb": "^6.5.0",
