--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "aptos": "^1.21.0",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.0",
