--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "aptos": "^1.21.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.8",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.2",
     "nes.css": "^2.3.0",
     "next": "13.4.12",
     "petra-plugin-wallet-adapter": "^0.4.4",
