--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "20.9.0",
